# Deploying_CNNs

./: README.md  pyproject.toml
SVHN_Classifier/: Readme.MD  cnn_model.py  data_feeder.py  deploy_flask_server.py  process_data.py  send_image_to_flask_server.py  test.py  train.py  train_mean_and_std.npy
SVHN_Classifier/model_save_dir_svhn_copy/: frozen_model.pb
deploy_kubernetes/: Dockerfile  Readme.MD  deploy_classifier.yaml
